--- a/_posts/2014/08/2014-08-29-restart.md
+++ b/_posts/2014/08/2014-08-29-restart.md
@@ -3,14 +3,16 @@ layout: post
 title:  事始め
 comments: true
 ---
-さて、旧サイトの閉鎖からずいぶん時間が経ってしまったが、そろそろ手を動かし始めようかと考えた。
+俺、このサイトが完成したら結婚するんだ‥‥（いろいろ脂肪フラグ）
 
-自分は職業SEで、以前はプログラム技術を中心にサイトを更新してきた。だけれど今、プログラム技術への興味は失われかけている。それなりのゲーム・アニメオタクだったはずだが、コンテンツ消化のペースもどんどん落ちてるのだ。
+で、どんな残骸を残そうかということですが。
 
-何故だろう？‥‥といいつつ、実は理由ははっきりしている。私は、私が一番好きなコンテンツが、*自分で書いた物語*だということに気が付いてしまったのだ。
+自分は職業SEで、以前はプログラム技術を中心にサイトを更新してました。けれど今、色々と興味が抜け落ちてきてるのです。プログラム技術は今は手段だし、それなりのゲーム・アニメオタクだったけど、コンテンツ消化のペースもどんどん落ちてる。
 
-私事だが2年ほど前に一気に小説を書き上げたことがある。その時の高揚感が未だ忘れられない。自分の要求を満たすものが自分の脳内から生まれ続ける時の脳内麻薬の連続放出を体験した結果、他のどんな娯楽も、ただの時間つぶしにしか思えない脳になってしまったのだ。
+実は理由ははっきりしてて。自分は、自分が一番好きなコンテンツが、*自分で書いた物語*だということに気が付いてしまったのでした。
 
-だからこのブログは「自分の物語を世界に残す」ためのあらゆる工夫をテーマに、のらりくらりと更新していきたいと思う。自分の根っこは技術者であるゆえに、多分に技術色の強い場所になると思うが、その辺はご容赦願いたい。
+私事だけど、2年ほど前に一気に趣味小説を書き上げたことがあります。その時の高揚感が未だ忘れられない。自分の要求を満たすものが自分の脳内から生まれ続ける時の脳内麻薬の連続放出を体験した結果、他のどんな娯楽も、ただの時間つぶしにしか思えない脳になってしまったのだ。
 
-さて、40越え独身の枯れてきた心に、どれだけの残骸が残っているのか？ま、場末の居酒屋で繰り広げられる雑多な会話の一つ程度に楽しんでいただければ幸いである。
+だからこのブログは「自分の物語を世界に残す」ためのあらゆる工夫をテーマに、のらりくらりと更新していきたいと思ってます。Webでの表現や、データの作り方、残し方とか。サイト自身が検討の場なのでものすごく落ち着きがないところになりそうだけど、あとまーそうは言いつつ脱線もいろいろしちゃうと思うけど、その辺はご容赦願いたい。
+
+さて、40越え独身の枯れてきた心に、どれだけの残骸が残っているのか？ま、場末の居酒屋で繰り広げられる雑多な会話の一つ程度に楽しんでいただければ幸いです。
