--- a/_posts/2014/2014-09-16-dream.md
+++ b/_posts/2014/2014-09-16-dream.md
@@ -1,12 +1,26 @@
 ﻿---
 layout: post
-title:  車輪の再発明の再発明の再発明の‥‥
+title:  怖いユメ
 comments: true
 ---
-ちょーださいけど最低限コメントが打てる設定に。
+最近、ユメ見てますか？夜見る方のユメ。
 
-あと、内部でMarkdownを使ってるんですが、
-微妙に気に入らないフォーマットなので少し手直ししようと手を加えてたら、
-いつの間にかpegに手を出している始末。
+調子が悪いと夢を見なくなる（というか多分覚えてられなくなる）方なんですが、
+最近はそこそこ夢を覚えてます。まー10分もしたら忘れますが。
+途中で目覚めて、「あ、この続きみたいなーっ」て感じで連載物とか見たりします。
 
-‥‥あれー？
+悪夢っぽいのも玉に見ます。どっちかというと、ユメの中で極端に感情が振れたら
+目が覚めちゃう感じですね。昔は怖い系でよく起きてましたが、
+最近はなんか怒ってる系統が多いです‥‥むう。
+
+こないだ、ものすごく調子に乗って有頂天になってて（なぜ有頂天になっていたのかは覚えていない）、
+そこに一言、ものすごく冷や水の冷静な言葉をかけられて（どんな一言かは覚えていない）、
+それにびっくりして目が覚めたことがあります。
+
+「やばい、自分ってこんな人間なんだ。」と真っ青になって目が覚めましたが、
+良く考えたら「自分のそんなとこはよくない。」って指摘できる自分がいるという事ですね。
+
+それに気が付いたらちょっと安心して、教訓にしよう、と思いつつ再び眠りに落ちました。
+
+まあ、何にびっくりしたのかはさっぱり思い出せないのですけどね。
+そんなもんです。
