--- a/_posts/2015/2015-02-04-space.md
+++ b/_posts/2015/2015-02-04-space.md
@@ -4,6 +4,8 @@ title:  作ってみた
 comments: true
 ---
 うかべんが５月３日にあるということなので作ってみた。
-![伺ゼミ](ukazemi.png)
+![伺ゼミ](/img/2015/ukazemi.png "伺ゼミ")
+
+[これ使いましたの。](http://bkaclub.web.fc2.com/henzemi_gen.html "これ使いましたの。")
 
 ‥‥後悔はしていない。多分。
