--- a/_posts/2016/2016-02-16-code.md
+++ b/_posts/2016/2016-02-16-code.md
@@ -3,24 +3,25 @@ layout: post
 title:  コード埋め込みテスト
 comments: true
 ---
-ブログ内にコード断片を埋め込むテスト
+ブログ内に`コード断片`を埋め込むテスト
 
-``` cs
-using System;
-namespace HelloWorld
-{
-    class Hello 
+    using System;
+    namespace HelloWorld
     {
-        static void Main() 
+        class Hello 
         {
-            Console.WriteLine("Hello World!");
-
-            // Keep the console window open in debug mode.
-            Console.WriteLine("Press any key to exit.");
-            Console.ReadKey();
+            static void Main() 
+            {
+                Console.WriteLine("Hello World!");
+    
+                // Keep the console window open in debug mode.
+                Console.WriteLine("Press any key to exit.");
+                Console.ReadKey();
+            }
         }
     }
-}
-``` 
 
-縦書き文書の中にコード断片だけ横書きなのはおされだと思うの。
+縦書き文書の中に
+コード断片だけ
+横書きなのは
+おされだと思うの。
