--- a/_posts/2016/2016-06-14-scroll.md
+++ b/_posts/2016/2016-06-14-scroll.md
@@ -6,32 +6,32 @@ comments: true
 マウスホイールで横スクロールするコードを調整しました。「jquery.mousewheel.js」を
 使ってます。マウスホイールイベントはこんな感じですが‥‥。
 
-    $(function() {
-        //スクロールスピード
-        var speed = -300;
-    
-        var scroll_webkit = function(mov){
-            var el = $('body')
-            var oldPos = el.scrollLeft();
-            var newPos = oldPos - mov * speed;
-            el.scrollLeft(newPos);
-        }
-    
-         var scroll_ie = function(mov){
-            var x = window.pageXOffset;
-            var oldY = window.pageYOffset;
-            var y = oldY + mov * speed;
-            window.scrollTo(x,y);
-        }
-    
-        //マウスホイールで横移動
-        $(document).mousewheel(function(event, mov) {
-            scroll_webkit(mov);
-            scroll_ie    (mov);
-    
-            return false;   //縦スクロール不可
-        });
-    });
+<pre><code class="language-javascript">$(function() {
+    //スクロールスピード
+    var speed = -300;
 
-地味にね、IEとWebkitで互換がないです。
+    var scroll_webkit = function(mov){
+        var el = $('body')
+        var oldPos = el.scrollLeft();
+        var newPos = oldPos - mov * speed;
+        el.scrollLeft(newPos);
+    }
+
+     var scroll_ie = function(mov){
+        var x = window.pageXOffset;
+        var oldY = window.pageYOffset;
+        var y = oldY + mov * speed;
+        window.scrollTo(x,y);
+    }
+
+    //マウスホイールで横移動
+    $(document).mousewheel(function(event, mov) {
+        scroll_webkit(mov);
+        scroll_ie    (mov);
+
+        return false;   //縦スクロール不可
+    });
+});</code></pre>
+
+地味にIEとWebkitで互換がないです。
 世界が一つになるのはまだまだ先の話だなあ。
