--- a/_posts/2016/2016-02-16-code.md
+++ b/_posts/2016/2016-02-16-code.md
@@ -5,21 +5,21 @@ comments: true
 ---
 ブログ内に`コード断片`を埋め込むテスト
 
-    using System;
-    namespace HelloWorld
+<pre><code class="language-csharp">using System;
+namespace HelloWorld
+{
+    class Hello 
     {
-        class Hello 
+        static void Main() 
         {
-            static void Main() 
-            {
-                Console.WriteLine("Hello World!");
-    
-                // Keep the console window open in debug mode.
-                Console.WriteLine("Press any key to exit.");
-                Console.ReadKey();
-            }
+            Console.WriteLine("Hello World!");
+
+            // Keep the console window open in debug mode.
+            Console.WriteLine("Press any key to exit.");
+            Console.ReadKey();
         }
     }
+}</code></pre>
 
 縦書き文書の中に
 コード断片だけ
