--- a/_posts/2016/2016-02-16-code.md
+++ b/_posts/2016/2016-02-16-code.md
@@ -5,7 +5,8 @@ comments: true
 ---
 ブログ内に`コード断片`を埋め込むテスト
 
-<pre><code class="language-csharp">using System;
+``` csharp
+using System;
 namespace HelloWorld
 {
     class Hello 
@@ -19,7 +20,8 @@ namespace HelloWorld
             Console.ReadKey();
         }
     }
-}</code></pre>
+}
+```
 
 縦書き文書の中に
 コード断片だけ
