--- a/_posts/2016/2016-06-14-scroll.md
+++ b/_posts/2016/2016-06-14-scroll.md
@@ -6,7 +6,8 @@ comments: true
 マウスホイールで横スクロールするコードを調整しました。「jquery.mousewheel.js」を
 使ってます。マウスホイールイベントはこんな感じですが‥‥。
 
-<pre><code class="language-javascript">$(function() {
+``` javascript
+$(function() {
     //スクロールスピード
     var speed = -300;
 
@@ -31,7 +32,8 @@ comments: true
 
         return false;   //縦スクロール不可
     });
-});</code></pre>
+});
+```
 
 地味にIEとWebkitで互換がないです。
 世界が一つになるのはまだまだ先の話だなあ。
