--- a/_posts/2016/2016-08-17-GODZILLA.md
+++ b/_posts/2016/2016-08-17-GODZILLA.md
@@ -6,9 +6,12 @@ published: false
 
 ---
 ### 一　要約
-　ゴジラと名付けられた未知の巨大生物において、その身体を支える代謝系には
-従来の酸素代謝を置き換える形で原子核分裂による代謝が行われていると想定される。
-膨大な崩壊熱を利用し、ケイ素を主成分とした「ゴジラ細胞」が成立することを示す。
+　ゴジラと名付けられた未知の巨大生物において、
+その身体を支える代謝系には従来の酸素代謝を置き換える形で
+原子核分裂による代謝が行われていると想定される。
+
+　膨大な崩壊熱を利用し、ケイ素を主成分とした「ゴジラ細胞」が
+成立することを示す。
 
 ### 二　ミトコンドリアの置換
 　炭素系生物におけるエネルギー生成回路はミトコンドリアが担っている。
@@ -18,32 +21,39 @@ published: false
  1. 活性酸素による細胞破壊の防止
 
 　酸素を利用することで効率的な熱量発生が可能だが、一方で酸素の扱いには
-危険性を伴う。ミトコンドリアは「炉」の提供により、主細胞が酸素を取り扱うことなく
+危険性を伴う。
+ミトコンドリアは「炉」の提供により、主細胞が酸素を取り扱うことなく
 エネルギーの取り出しを行うことを可能にしている。
 
 　酸素を超越する熱発生機関として、「核分裂」を利用したエネルギー生成が
-行われるのであれば、やはり「炉」を提供するミトコンドリア相当の機関が存在すると
+行われるのであれば、
+やはり「炉」を提供するミトコンドリア相当の機関が存在すると
 想定するのが妥当である。
 
 　核ミトコンドリアにおいては、その反応で発生する
 放射線による内部被ばくから細胞物質を守る構造が必要となる。
 更には発生する膨大な熱量を処理する必要も発生する。
 
-　核分裂代謝を実現するためのミトコンドリアとその体細胞構成について検討を行う。
+　核分裂代謝を実現するためのミトコンドリアと、
+その体細胞構成について検討を行う。
 
 ### 三　鉛を主成分とした細胞構成
-　核分裂を前提とした大容量熱源を扱う場合、炭素ではなく鉛を主成分とした細胞が
-望ましいと考える。
+　核分裂を前提とした大容量熱源を扱う場合、
+炭素ではなく鉛を主成分とした細胞が望ましい。
+今回、核分裂により発生する膨大なアルファ線を細胞レベルの
+閉鎖環境に閉じ込めることが可能な物質として、鉛が最適であると
+結論付けた。以下に理由を述べる。
 
 　炭素・水を主成分とした従来型生物では沸点の問題が発生する。
 細胞内で完結する反応は液体である事が望ましいが、核分裂を想定したとき、
-１００度という沸点は低すぎる。また、炭素も比較的低温で発火する物体であるため、
+１００度という沸点は低すぎる。
+また、炭素も比較的低温で発火する物体であるため、
 連続した核分裂反応エネルギーを安定して取り出す素材としては不適切である。
-
 　一方で、炭素を鉛に置き換えた場合、以下の効果が期待される。
 
  1. 放射線の遮蔽効果
  1. 融点600.61K　～　沸点2022Kであり、期待される熱領域において液体
+
 
 
 
