--- a/_posts/2018-08-26-new_site.md
+++ b/_posts/2018-08-26-new_site.md
@@ -22,3 +22,6 @@ tags:
 
 事をモットーとして、残骸を残し続けたいと思います。
 出来ればここから数十年、日々思ったことを書き綴っていきたいですね。
+
+#### 追記
+https://pages-themes.github.io/leap-day/ に更新する予定。
