--- a/_posts/2020-08-10-emo.md
+++ b/_posts/2020-08-10-emo.md
@@ -1,15 +1,16 @@
 ---
 layout: post
-title:  バカンスプログラマー
+title:  「えも？」をリリースした
 comments: true
 tags:
    - 伺か
 ---
 
-それは夏休みの間だけサイトを更新するセミのような趣味グラマー。。。
-これはひどい。
+[ゴースト「えも？」](https://raw.githubusercontent.com/ekicyou/emo-gs/stable/ghost/emo-gs.nar)を公開します。
 
-ひどいついでに、[ものすごく未完成なゴースト](https://raw.githubusercontent.com/ekicyou/emo-gs/stable/ghost/emo-gs.nar)を公開します。
+ゴーストとしてはひどく未完成で、
 ふつうこのレベルの完成度でリリースすることはないと思いますが、
-このゴーストは曲がりなりにもフルスペックLua栞実装してるので、
+SHIORIとしてはフルスペックLua＆Rust栞という変態さんなので、
 最低限の体裁を整えて、表に出しておくことにしました。
+
+ゴーストネタは今から考える‥‥！
