--- a/_posts/2020-08-10-emo.md
+++ b/_posts/2020-08-10-emo.md
@@ -6,6 +6,7 @@ tags:
    - 伺か
 ---
 
+![ゴースト「えも？」](/img/2020-08-10-emo.png "えも？")
 [ゴースト「えも？」](https://raw.githubusercontent.com/ekicyou/emo-gs/stable/ghost/emo-gs.nar)を公開します。
 
 ゴーストとしてはひどく未完成で、
