--- a/_posts/2020-08-10-emo.md
+++ b/_posts/2020-08-10-emo.md
@@ -6,7 +6,7 @@ tags:
    - 伺か
 ---
 
-![ゴースト「えも？」](/img/2020-08-10-emo.png "えも？")
+[![ゴースト「えも？」](/img/2020-08-10-emo.png "えも？")](https://raw.githubusercontent.com/ekicyou/emo-gs/stable/ghost/emo-gs.nar)<br />
 [ゴースト「えも？」](https://raw.githubusercontent.com/ekicyou/emo-gs/stable/ghost/emo-gs.nar)を公開します。
 
 ゴーストとしてはひどく未完成で、
