--- a/_posts/2020-08-10-emo.md
+++ b/_posts/2020-08-10-emo.md
@@ -14,4 +14,12 @@ tags:
 SHIORIとしてはフルスペックLua＆Rust栞という変態さんなので、
 最低限の体裁を整えて、表に出しておくことにしました。
 
+シェルですが、それぞれフリーシェルです。
+\0側は、[ゆゆぴか](https://yusyuparo.net/)さん作成、[「コンフィズリー」](https://yusyuparo.net/free.html)のパープルさん、
+\1側は、[大槻](http://th88.blog.shinobi.jp/)さん作成、[「City-Pop'n」](http://th88.blog.shinobi.jp/%E3%83%95%E3%83%AA%E3%83%BC%E3%82%B7%E3%82%A7%E3%83%AB/%E3%83%95%E3%83%AA%E3%83%BC%E3%82%B7%E3%82%A7%E3%83%AB%E3%80%8Ccity-pop--n%E3%80%8D)を利用しています。
+
+バルーンも専用で作りました。画像について[「フキダシデザイン」](https://fukidesign.com/)より頂いています。
+
+イマジネーションを掻き立てられており感謝です！
+
 ゴーストネタは今から考える‥‥！
