イメージタグの出力を追加

--- a/_posts/2020-08-10-emo.md
+++ b/_posts/2020-08-10-emo.md
@@ -1,6 +1,9 @@
 ---
 layout: post
 title:  「えも？」をリリースした
+image: /img/2020-08-10-emo.png
+description:
+   ゴースト「えも？」をリリースした。
 comments: true
 tags:
    - 伺か
