プロンプトの説明を明確にし、圧縮された内容についての言及を追加

--- a/_posts/2026-01-06-syuzo.md
+++ b/_posts/2026-01-06-syuzo.md
@@ -17,11 +17,11 @@ tags:
 
 基本的に目的と使い方はオリジナルプロンプトと同じです。**すでに基礎的なプロフィールが決まっているキャラクターの内面を掘り下げ**、あなたの一次創作（うちのこ）に深みを持たせたり、AIキャラクターのプロンプトの改善の種にする目的で使用します。
 
-なんと**元の約3500字 → 約1500字に圧縮**されているのにもかかわらず、口調が松岡修造になる最大のデメリットを除けばほぼ同等性能ではないかと観測しています。
 
 ## 削ったもの
 
-[プロンプト作成者のコメント](https://claude.ai/share/e5a716bd-c8d8-431b-ad1b-621266032b09)はこちらです。
+[プロンプト作成者のコメント](https://claude.ai/share/e5a716bd-c8d8-431b-ad1b-621266032b09)はこちらです。なんと**元の約3500字 → 約1500字に圧縮**されているのにもかかわらず、口調が松岡修造になる最大のデメリットを除けばほぼ同等性能ではないかと観測しています。
+
 
 要約すると以下の部分。
 
