ライセンスセクションのリンクを修正し、明確な形式に変更

--- a/_posts/2026-01-06-syuzo.md
+++ b/_posts/2026-01-06-syuzo.md
@@ -42,7 +42,7 @@ tags:
 ## ライセンス
 元と同じくCC0、つまりパブリックドメイン、要は好きにしてください。誰が書いたかの明記も要りません。
 
-https://creativecommons.org/publicdomain/zero/1.0/deed.ja
+[CC0 1.0 全世界](https://creativecommons.org/publicdomain/zero/1.0/deed.ja)
 
 
 ## どうぞ
