注意事項セクションに「熱くなりすぎず」というキーワードの追加を行い、内容を明確化

--- a/_posts/2026-01-06-syuzo.md
+++ b/_posts/2026-01-06-syuzo.md
@@ -39,6 +39,8 @@ tags:
 
 松岡修造に対する解像度が高いLLMが望ましいです。自分も使っているところなのであまり観測例はだせませんが、少なくとも`Claude Opus 4.5`において十分な性能を発揮することは確認しています。
 
+**熱くなりすぎず**というキーワードを外すとくどくなるかもしれません。責任は持ちません。
+
 ## ライセンス
 元と同じくCC0、つまりパブリックドメイン、要は好きにしてください。誰が書いたかの明記も要りません。
 
