プロンプトの説明を修正し、内容を明確化

--- a/_posts/2026-01-06-syuzo.md
+++ b/_posts/2026-01-06-syuzo.md
@@ -2,7 +2,7 @@
 layout: post
 title: キャラクターの「芯」を松岡修造と掘るプロンプト
 description:
-   「にゃんぷっぷー」言語について語る
+   キャラクターの「芯」を松岡修造と掘る
 comments: true
 tags:
    - 伺か
