サンプル例を追加し、プロンプトの内容を充実させる

--- a/_posts/2026-01-06-syuzo-to.md
+++ b/_posts/2026-01-06-syuzo-to.md
@@ -45,6 +45,8 @@ tags:
 
 [CC0 1.0 全世界](https://creativecommons.org/publicdomain/zero/1.0/deed.ja)
 
+## サンプル例
+[えもと紫でやってみた。](https://claude.ai/share/45db8c2f-7026-4d3e-90eb-704b78e8664d)
 
 ## どうぞ
 
