feat(posts): ぱすたさんの文法チェックモードのリンクを修正

--- a/_posts/2014-10-04-pasta.md
+++ b/_posts/2014-10-04-pasta.md
@@ -12,7 +12,7 @@ comments: true
 「＠おはよう　」（最後は全角空白）であらゆる特殊モードを呼び出そうという
 チョー手抜きパーサ実装により実現されているのだ。
 
-「[ぱすたさん：文法チェックモード](http://ekicyou.github.io/pasta/app/design.html)」
+「[ぱすたさん：文法チェックモード](http://ekicyou.github.io/zzz-pasta/app/design.html)」
 
 ただ、Google Chrome系だとまだ文字描画が不自然。
 貼り付け元のコンテンツが単純ならかすれないんですが、
