--- a/2026-02-06-pasta.md
+++ b/2026-02-06-pasta.md
@@ -7,7 +7,7 @@ comments: true
 
 当時から考えていたDSLが、最近のAIの進歩によってなぜかアルファーリリースできるだけの完成度に到達してしまったので公開しちゃいます。
 
-[リポジトリ](https://github.com/ekicyou/pasta) |
+| [リポジトリ](https://github.com/ekicyou/pasta) | [リリース v0.1.2](https://github.com/ekicyou/pasta/releases/tag/v0.1.2) |
 
 こんな感じでシーンを記述できます。
 
