fix(core): 不具合修正のためのコード変更

--- a/2026-02-06-pasta.md
+++ b/2026-02-06-pasta.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  SHIORI `pasta.dll`とサンプルゴーストをでっちあげる
+image: /img/2026-02-06-pasta.png
 comments: true
 ---
 構想10年というか、[12年前の記事](https://ekicyou.github.io/2014/10/04/pasta.html)なんですが。。。
@@ -21,5 +22,5 @@ comments: true
 　　　　　：ようこそ！一緒に楽しもうね。
 ```
 
-まあ、興味があったら触ってみてくださいな。
+まだ色々と不具合満載だとは思いますが、、、やっと船出が出来ましたよ！
 
