docs(posts): リリースリンクのフォーマットを修正

--- a/_posts/2026-02-06-pasta.md
+++ b/_posts/2026-02-06-pasta.md
@@ -8,7 +8,7 @@ comments: true
 
 当時から考えていたDSLが、最近のAIの進歩によってなぜかアルファーリリースできるだけの完成度に到達してしまったので公開しちゃいます。
 
-| [リポジトリ](https://github.com/ekicyou/pasta) | [リリース v0.1.2](https://github.com/ekicyou/pasta/releases/tag/v0.1.2) |
+| [リポジトリ](https://github.com/ekicyou/pasta) | [リリース](https://github.com/ekicyou/pasta/releases) |
 
 こんな感じでシーンを記述できます。
 
