fix(core): 不具合修正のためのコード変更

--- a/_posts/2026-02-06-pasta.md
+++ b/_posts/2026-02-06-pasta.md
@@ -4,6 +4,8 @@ title:  SHIORI `pasta.dll`とサンプルゴーストをでっちあげる
 image: /img/2026-02-06-pasta.png
 comments: true
 ---
+<img src="/img/pasta.svg" alt="Pasta logo" width="120" align="left" style="margin-right: 1em;">
+
 構想10年というか、[12年前の記事](https://ekicyou.github.io/2014/10/04/pasta.html)なんですが。。。
 
 当時から考えていたDSLが、最近のAIの進歩によってなぜかアルファーリリースできるだけの完成度に到達してしまったので公開しちゃいます。
